[powermeter] On-demand graphs

--- a/graphs/minutes.html
+++ b/graphs/minutes.html
@@ -16,13 +16,13 @@
         </ul>
       </div>
 
-      <img src="P-minutes.png" alt="Wirkleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-P&start=-30m" alt="Wirkleistung"/>
       <p/>
-      <img src="Q-minutes.png" alt="Blindleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-Q&start=-30m" alt="Blindleistung"/>
       <p/>
-      <img src="I-minutes.png" alt="Strom"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-I&start=-30m" alt="Strom"/>
       <p/>
-      <img src="U-minutes.png" alt="Spannung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-U&start=-30m" alt="Spannung"/>
 
     <div class="content">
   </body>
