--- a/graphs/hours.html
+++ b/graphs/hours.html
@@ -16,13 +16,13 @@
         </ul>
       </div>
 
-      <img src="/cgi-bin/graph.cgi?graph=power-P&start=-30m" alt="Wirkleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-P&start=-8h" alt="Wirkleistung"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-Q&start=-30m" alt="Blindleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-Q&start=-8h" alt="Blindleistung"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-I&start=-30m" alt="Strom"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-I&start=-8h" alt="Strom"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-U&start=-30m" alt="Spannung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-U&start=-8h" alt="Spannung"/>
 
     <div class="content">
   </body>
