--- a/graphs/hours.html
+++ b/graphs/hours.html
@@ -13,6 +13,7 @@
           <li><a href="hours.html">hours</a>
           <li><a href="days.html">days</a>
           <li><a href="weeks.html">weeks</a>
+          <li><a href="months.html">months</a>
         </ul>
       </div>
 
