--- a/graphs/machines-minutes.html
+++ b/graphs/machines-minutes.html
@@ -18,16 +18,28 @@
       </div>
 
       <hr/>
-      <h1>casino</h1>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=casino&start=-30m" alt="CPU"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=casino&start=-30m" alt="Memory"/>
-
-      <hr/>
       <h1>kvm</h1>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=kvm&start=-30m" alt="LOAD"/>
+      <p/>
       <img src="/cgi-bin/graph.cgi?graph=cpu1&host=kvm&start=-30m" alt="CPU"/>
       <p/>
       <img src="/cgi-bin/graph.cgi?graph=memory&host=kvm&start=-30m" alt="Memory"/>
+
+      <hr/>
+      <h1>weblab</h1>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=weblab&start=-30m" alt="LOAD"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=weblab&start=-30m" alt="CPU"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=weblab&start=-30m" alt="Memory"/>
+
+      <hr/>
+      <h1>casino</h1>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=casino&start=-30m" alt="LOAD"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=casino&start=-30m" alt="CPU"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=casino&start=-30m" alt="Memory"/>
 
     <div class="content">
   </body>
