--- a/graphs/power-days.html
+++ b/graphs/power-days.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="30"/>
+    <meta http-equiv="refresh" content="3600"/>
     <link rel=StyleSheet href="style.css" type="text/css"/>
     <title>Das Labor -- Powermeter</title>
   </head>
@@ -9,21 +9,21 @@
 
       <div class="range">
         <ul>
-          <li><a href="minutes.html">minutes</a>
-          <li><a href="hours.html">hours</a>
-          <li><a href="days.html">days</a>
-          <li><a href="weeks.html">weeks</a>
-          <li><a href="months.html">months</a>
+          <li><a href="power-minutes.html">minutes</a>
+          <li><a href="power-hours.html">hours</a>
+          <li><a href="power-days.html">days</a>
+          <li><a href="power-weeks.html">weeks</a>
+          <li><a href="power-months.html">months</a>
         </ul>
       </div>
 
-      <img src="/cgi-bin/graph.cgi?graph=power-P&start=-7d" alt="Wirkleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-P&start=-8d" alt="Wirkleistung"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-Q&start=-7d" alt="Blindleistung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-Q&start=-8d" alt="Blindleistung"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-I&start=-7d" alt="Strom"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-I&start=-8d" alt="Strom"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=power-U&start=-7d" alt="Spannung"/>
+      <img src="/cgi-bin/graph.cgi?graph=power-U&start=-8d" alt="Spannung"/>
 
     <div class="content">
   </body>
