--- a/graphs/power-minutes.html
+++ b/graphs/power-minutes.html
@@ -9,11 +9,11 @@
 
       <div class="range">
         <ul>
-          <li><a href="minutes.html">minutes</a>
-          <li><a href="hours.html">hours</a>
-          <li><a href="days.html">days</a>
-          <li><a href="weeks.html">weeks</a>
-          <li><a href="months.html">months</a>
+          <li><a href="power-minutes.html">minutes</a>
+          <li><a href="power-hours.html">hours</a>
+          <li><a href="power-days.html">days</a>
+          <li><a href="power-weeks.html">weeks</a>
+          <li><a href="power-months.html">months</a>
         </ul>
       </div>
 
