[powermeterd] Various graph updates

--- a/graphs/can-days.html
+++ b/graphs/can-days.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="30"/>
+    <meta http-equiv="refresh" content="3600"/>
     <link rel=StyleSheet href="style.css" type="text/css"/>
-    <title>Das Labor -- Powermeter</title>
+    <title>CAN-Meter</title>
   </head>
   <body bgcolor="ffffff">
     <div class="content">
@@ -13,18 +13,15 @@
           <li><a href="can-hours.html">hours</a>
           <li><a href="can-days.html">days</a>
           <li><a href="can-weeks.html">weeks</a>
+          <li><a href="can-months.html">months</a>
         </ul>
       </div>
 
-      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-7d" alt="Wirkleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-7d" alt="Blindleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-7d" alt="Strom"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-7d" alt="Bytes"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-pkts&start=-7d" alt="Packets"/>
+      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-8d" alt="CAN Spannung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-8d" alt="CAN Strom"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-8d" alt="CAN Leistung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-8d" alt="Bytes"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-pkts&start=-8d" alt="Packets"/>
 
     <div class="content">
   </body>
