--- a/graphs/can-minutes.html
+++ b/graphs/can-minutes.html
@@ -13,18 +13,15 @@
           <li><a href="can-hours.html">hours</a>
           <li><a href="can-days.html">days</a>
           <li><a href="can-weeks.html">weeks</a>
+          <li><a href="can-months.html">months</a>
         </ul>
       </div>
 
-      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-30min" alt="Wirkleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-30min" alt="Blindleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-30min" alt="Strom"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-30min" alt="Bytes"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-pkts&start=-30min" alt="Packets"/>
+      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-30m" alt="CAN Spannung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-30m" alt="CAN Strom"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-30m" alt="CAN Leistung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-30m" alt="Bytes"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-pkts&start=-30m" alt="Packets"/>
 
     <div class="content">
   </body>
