--- a/graphs/can-hours.html
+++ b/graphs/can-hours.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="30"/>
+    <meta http-equiv="refresh" content="120"/>
     <link rel=StyleSheet href="style.css" type="text/css"/>
-    <title>Das Labor -- Powermeter</title>
+    <title>CAN-Meter</title>
   </head>
   <body bgcolor="ffffff">
     <div class="content">
@@ -13,17 +13,14 @@
           <li><a href="can-hours.html">hours</a>
           <li><a href="can-days.html">days</a>
           <li><a href="can-weeks.html">weeks</a>
+          <li><a href="can-months.html">months</a>
         </ul>
       </div>
 
-      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-8h" alt="Wirkleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-8h" alt="Blindleistung"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-8h" alt="Strom"/>
-      <p/>
-      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-8h" alt="Bytes"/>
-      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-U&start=-8h" alt="CAN Spannung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-I&start=-8h" alt="CAN Strom"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-P&start=-8h" alt="CAN Leistung"/><p/>
+      <img src="/cgi-bin/graph.cgi?graph=can-bytes&start=-8h" alt="Bytes"/><p/>
       <img src="/cgi-bin/graph.cgi?graph=can-pkts&start=-8h" alt="Packets"/>
 
     <div class="content">
