[powermeterd] Various graph updates

--- a/graphs/machines-days.html
+++ b/graphs/machines-days.html
@@ -18,12 +18,27 @@
       </div>
 
       <hr/>
+      <h1>Network</h1>
+      <img src="http://wl.lan.labor-bochum.net/cgi-bin/graph.cgi?graph=uplink&start=-8d" alt="DSL Uplink"/>
+      <p/>
+
+      <hr/>
       <h1>kvm</h1>
       <img src="/cgi-bin/graph.cgi?graph=load&host=kvm&start=-8d" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=kvm&start=-8d" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu4&host=kvm&start=-8d" alt="CPU"/>
       <p/>
       <img src="/cgi-bin/graph.cgi?graph=memory&host=kvm&start=-8d" alt="Memory"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=disk&host=kvm&start=-8d" alt="Disk I/O"/>
+
+      <hr/>
+      <h1>jukebox</h1>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=jukebox&start=-8d" alt="LOAD"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=jukebox&start=-8d" alt="CPU"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=jukebox&start=-8d" alt="Memory"/>
 
       <hr/>
       <h1>weblab</h1>
@@ -32,6 +47,14 @@
       <img src="/cgi-bin/graph.cgi?graph=cpu1&host=weblab&start=-8d" alt="CPU"/>
       <p/>
       <img src="/cgi-bin/graph.cgi?graph=memory&host=weblab&start=-8d" alt="Memory"/>
+
+      <hr/>
+      <h1>bastel</h1>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=bastel&start=-8d" alt="LOAD"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=bastel&start=-8d" alt="CPU"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=bastel&start=-8d" alt="Memory"/>
 
       <hr/>
       <h1>casino</h1>
