[powemeter] Add kvm temerature plots

--- a/graphs/machines-minutes.html
+++ b/graphs/machines-minutes.html
@@ -19,50 +19,52 @@
 
       <hr/>
       <h1>Network</h1>
-      <img src="/cgi-bin/graph.cgi?graph=uplink&start=-30m" alt="DSL Uplink"/>
+      <img src="/cgi-bin/graph.cgi?graph=uplink&start=-60m" alt="DSL Uplink"/>
       <p/>
 
       <hr/>
       <h1>kvm</h1>
-      <img src="/cgi-bin/graph.cgi?graph=load&host=kvm&start=-30m" alt="LOAD"/>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=kvm&start=-60m" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu4&host=kvm&start=-30m" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu4&host=kvm&start=-60m" alt="CPU"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=kvm&start=-30m" alt="Memory"/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=kvm&start=-60m" alt="Memory"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=disk&host=kvm&start=-30m" alt="Disk I/O"/>
+      <img src="/cgi-bin/graph.cgi?graph=disk&host=kvm&start=-60m" alt="Disk I/O"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=temp&host=kvm&start=-60m" alt="Disk I/O"/>
 
       <hr/>
       <h1>jukebox</h1>
-      <img src="/cgi-bin/graph.cgi?graph=load&host=jukebox&start=-30m" alt="LOAD"/>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=jukebox&start=-60m" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=jukebox&start=-30m" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=jukebox&start=-60m" alt="CPU"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=jukebox&start=-30m" alt="Memory"/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=jukebox&start=-60m" alt="Memory"/>
 
       <hr/>
       <h1>weblab</h1>
-      <img src="/cgi-bin/graph.cgi?graph=load&host=weblab&start=-30m" alt="LOAD"/>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=weblab&start=-60m" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=weblab&start=-30m" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=weblab&start=-60m" alt="CPU"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=weblab&start=-30m" alt="Memory"/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=weblab&start=-60m" alt="Memory"/>
 
       <hr/>
       <h1>bastel</h1>
-      <img src="/cgi-bin/graph.cgi?graph=load&host=bastel&start=-30m" alt="LOAD"/>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=bastel&start=-60m" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=bastel&start=-30m" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=bastel&start=-60m" alt="CPU"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=bastel&start=-30m" alt="Memory"/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=bastel&start=-60m" alt="Memory"/>
 
       <hr/>
       <h1>casino</h1>
-      <img src="/cgi-bin/graph.cgi?graph=load&host=casino&start=-30m" alt="LOAD"/>
+      <img src="/cgi-bin/graph.cgi?graph=load&host=casino&start=-60m" alt="LOAD"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=casino&start=-30m" alt="CPU"/>
+      <img src="/cgi-bin/graph.cgi?graph=cpu1&host=casino&start=-60m" alt="CPU"/>
       <p/>
-      <img src="/cgi-bin/graph.cgi?graph=memory&host=casino&start=-30m" alt="Memory"/>
+      <img src="/cgi-bin/graph.cgi?graph=memory&host=casino&start=-60m" alt="Memory"/>
 
     <div class="content">
   </body>
