--- a/graphs/machines-hours.html
+++ b/graphs/machines-hours.html
@@ -19,7 +19,7 @@
 
       <hr/>
       <h1>Network</h1>
-      <img src="http://wl.lan.labor-bochum.net/cgi-bin/graph.cgi?graph=uplink&start=-8h" alt="DSL Uplink"/>
+      <img src="/cgi-bin/graph.cgi?graph=uplink&start=-8h" alt="DSL Uplink"/>
       <p/>
 
       <hr/>
@@ -31,6 +31,8 @@
       <img src="/cgi-bin/graph.cgi?graph=memory&host=kvm&start=-8h" alt="Memory"/>
       <p/>
       <img src="/cgi-bin/graph.cgi?graph=disk&host=kvm&start=-8h" alt="Disk I/O"/>
+      <p/>
+      <img src="/cgi-bin/graph.cgi?graph=temp&host=kvm&start=-8h" alt="Disk I/O"/>
 
       <hr/>
       <h1>jukebox</h1>
